# MetaOakleyVerse

./: .gitignore  README.md  SDD.md
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yml  dat-cameraaccess-sample.yml  ios-build.yml  ios-mock-visual-test.yml  ios-testflight-later.yml.example
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  media_utils.py  schemas.py
backend/app/providers/: gemini_image_edit.py  gemini_video.py  mock_ai.py  openai_tts.py  openai_vision.py
backend/app/routes/: describe.py  health.py  media.py
backend/tests/: test_background.py  test_describe_photo.py  test_describe_video.py  test_health.py
ios/: project.yml
ios/MetaOakleyVision/: AppRootView.swift  MetaOakleyVisionApp.swift
ios/MetaOakleyVision/Config/: AppConfig.swift  Environment.swift
ios/MetaOakleyVision/Features/BackgroundEdit/: BackgroundEditView.swift  BackgroundEditViewModel.swift
ios/MetaOakleyVision/Features/Capture/: CaptureView.swift  CaptureViewModel.swift
ios/MetaOakleyVision/Features/Connect/: ConnectView.swift  ConnectViewModel.swift
ios/MetaOakleyVision/Models/: AppError.swift  BackgroundEditResponse.swift  CapturedMedia.swift  DescribePhotoResponse.swift  DescribeVideoResponse.swift  GlassesConnectionState.swift  VideoFrame.swift
ios/MetaOakleyVision/Resources/: Info.plist
ios/MetaOakleyVisionTests/: AppConfigTests.swift  CaptureViewModelTests.swift  MockGlassesCameraProviderTests.swift  VisionBackendClientTests.swift
ios/MetaOakleyVisionUITests/: PhotoMVPVisualDemoUITests.swift
(+15 files in other folders)
