[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaoakleyvision-backend"
version = "0.1.0"
description = "Backend APIs for Meta Oakley Vision"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "Pillow>=10.3.0",
  "openai>=1.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
